# EventBus

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  THANKS.md
docs/beginner/: setup.md
docs/res/: EventBus-concept.draw.io.xml
include/eventbus/: Event.h  EventBus.h  EventCollector.h  Notification.h  Notification2.h  Notifier.h
lib/: CMakeLists.txt  EventBusConfig.cmake
lib/cmake/: Config.cmake.in  EventBus_CPack.cmake  InstallHelp.cmake
lib/include/dexode/: EventBus.hpp
lib/include/dexode/eventbus/: Listener.hpp  Subscriber.hpp
lib/include/dexode/eventbus/strategy/: Protected.hpp  Transaction.hpp
lib/include/eventbus/: AsyncEventBus.h  EventBus.h  EventCollector.h  TokenHolder.h
lib/include/eventbus/internal/: AsyncCallbackVector.h  TransactionCallbackVector.h  common.h
lib/src/: EventCollector.cpp
lib/src/dexode/: EventBus.cpp  EventBus.hpp
lib/src/dexode/eventbus/: Bus.hpp  Listener.hpp  TagEventBus.hpp
lib/src/dexode/eventbus/internal/: AsyncCallbackVector.h  CallbackVector.h  ListenerAttorney.hpp  TransactionCallbackVector.h  common.h  event_id.hpp  listener_traits.hpp
lib/src/dexode/eventbus/perk/: PassPerk.cpp  PassPerk.hpp  Perk.cpp  Perk.hpp  PerkEventBus.cpp  PerkEventBus.hpp  TagPerk.cpp  TagPerk.hpp  WaitPerk.cpp  WaitPerk.hpp
lib/src/dexode/eventbus/permission/: PostponeBus.hpp
lib/src/dexode/eventbus/strategy/: Protected.cpp  Protected.hpp  Transaction.cpp  Transaction.hpp
lib/src/dexode/eventbus/stream/: EventStream.hpp  ProtectedEventStream.hpp
lib/src/eventbus/: AsyncEventBus.cpp
performance/: .gitignore  CCNotificationCenterPerformance.patch  CMakeLists.txt  README.md
performance/cocos2d-x-compare/: CCNotificationCenterPerformance.cpp  Cocos2dxCompare.cmake
performance/eventbus/: EventBus2Performance.cpp  EventBusPerformance.cpp
performance/src/: AsyncEventBusPerformance.cpp  EventBusPerformance.cpp  PocoNotificationCenterPerformance.cpp
sample/: CMakeLists.txt
sample/src/: main.cpp
src/: EventCollector.cpp  EventCollector.h  EventContainer.cpp  EventContainer.h  Notification.h  Notifier.h
src/eventbus/: EventCollector.cpp  Notification.cpp  Notification.h
src/experimental/eventbus/: EventBus.h
test/: CMakeLists.txt
test/eventbus/: EventCollectorTest.cpp  NotificationTest.cpp  NotifierTest.cpp  sample.cpp
test/integration/: CMakeLists.txt
test/integration/src/dexode/eventbus/test/: SuiteWait.cpp
test/src/: AsyncEventBusTest.cpp  EventCollectorTest.cpp  EventIdTest.cpp  NotifierTest.cpp  TestTagEventBus.cpp
test/src/dexode/eventbus/test/: SuiteEventID.cpp  event.hpp
test/unit/: CMakeLists.txt
test/unit/src/dexode/eventbus/test/: SuiteConcurrentEventBus.cpp  SuiteEventBus.cpp  SuiteListener.cpp
use_case/: CMakeLists.txt  README.md
use_case/basic/: CMakeLists.txt  README.md
use_case/basic/src/: main.cpp
use_case/tagged_events/: CMakeLists.txt  README.md
use_case/tagged_events/src/: Character.cpp  Character.hpp  EventBus.hpp  Gui.cpp  Gui.hpp  Team.cpp  Team.hpp  event.hpp  main.cpp
